<resources>
    /*Menu*/
    <string name="app_name">Bio Win Oficial</string>
    <string name="logOut">Cerrar Sesión</string>
    /*Main Activity*/
    <string name="tv1">BIO WIN</string>
    <string name="tv2">Ingrese su correo</string>
    <string name="et1"> </string>
    <string name="tv3">Ingrese su contraseña</string>
    <string name="et2"> </string>
    <string name="btnLogin">Iniciar sesión</string>
    <string name="btnRegistrar">Registrarse</string>

    /*Principal Activity*/
    <string name="tv4">¡Bienvenid@!</string>
    <string name="tv5">Puntos Disponibles</string>
    <string name="etpuntos"> </string>
    <string name="btnCentros">Centro Reciclado</string>
    <string name="btnLista">Útiles Escolares</string>

    //canjea tus puntos
    <string name="tv7">
        Nota: \n
        Los puntos que acumules no cuentan con una fecha de vencimiento
    </string>
    <string name="tv176">
        \nComparta con sus amigos\n
        Comparta la aplicación de BioWin con sus amigos para que ellos también puedan ganar artículos nuevos
    </string>

    /*Centros Activity*/
    <string name="tv8">Encuentra el centro de reciclado más cercano a tu localidad</string>
    <string name="btnRegresar">Regresar</string>

    /*Lista Activity*/
    <string name="tv9">Añade los utiles que quieras usando tus Bio Puntos</string>
    <string name="tv10">Libreta</string>
    <string name="tv11">Pluma</string>
    <string name="tv12">Lapices</string>
    <string name="tv13">Hojas</string>
    <string name="btnSuma">+</string>
    <string name="btnResta">-</string>
    <string name="btnEnviar">Enviar</string>
    <string name="tv14">10</string>
    <string name="tv15">5</string>
    <string name="tv16">3</string>
    <string name="tv17">15</string>
    <string name="et3"> 0 </string>
    <string name="et4"> 0 </string>
    <string name="et5"> 0 </string>
    <string name="et6"> 0 </string>

    /*Registro*/
    <string name="tv20">Ingresa los datos solicitados</string>

    <string name="et8"> </string>
    <string name="tv21">Nombre *</string>
    <string name="et9"> </string>
    <string name="tv22">Correo *</string>
    <string name="et10"> </string>
    <string name="tv23">Contraseña *</string>
    <string name="btnReg">Registrar</string>

    /*Acerca De*/
    <string name="acercade">Bio Win \n
        Versión 1.0 (compilación 1.0.1.1) \n
        © 2019 Josué Roberto Ramos Miranda \n
        Todos los derechos reservados \n\n\n
        Siguenos en nuestras Redes Sociales\n\n\n\n

        ¡¡GRACIAS POR APOYAR EL PLANETA RECICLANDO!!
    </string>

</resources>
